# Kansuuji

./: README.md  license  pyproject.toml
docker/: Dockerfile
kansuuji/: __init__.py  kansuuji.py  utils.py
tests/: test_kansuuji.py
